miniextendr-macros/tests/ui/rdata_generic_with_pub.stderr
error: ExternalPtr does not support generic structs; .Call entrypoints cannot be generic
  --> tests/ui/rdata_generic_with_pub.rs:10:11
   |
10 | struct Bad<T> {
   |           ^^^
